@@ -75,6 +75,8 @@ Release 0.2.0 - Sept-2011
   OPTIMIZATIONS
 
   BUG FIXES
+    HCAT-103. Update documentation after rpm changes per HCATALOG-63 (khorgath via hashutosh)    
+
     HCAT-113. rpm name not properly reflecting the version number (gates via hashutosh)
 
     HCAT-84. Incorrect or missing SVN property settings (sebb via hashutosh)    
